--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head> 
+<head>
   <meta charset="utf-8">
   <title>PhotoCalc</title>
   <base href="/">
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="PhotoCalcDemo/favicon.ico">
 </head>
-<body style="padding:10px;">
+<body style="padding:10px;border:0px;margin:0;">
   <app-root></app-root>
 <script type="text/javascript" src="PhotoCalcDemo/inline.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/polyfills.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/styles.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/vendor.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/main.bundle.js"></script></body>
 </html>
