--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Length: 784 pages">
   <link rel="icon" type="image/x-icon" href="PhotoCalcDemo/favicon.ico">
 </head>
 <body style="padding:10px;border:0px;margin:0;">
