--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <body style="padding:10px;border:0px;margin:0;">
   <app-root></app-root>
 <script type="text/javascript" src="PhotoCalcDemo/inline.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/polyfills.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/styles.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/vendor.bundle.js"></script><script type="text/javascript" src="PhotoCalcDemo/main.bundle.js"></script></body>
+<p>Dev only code</p>
 </html>
